--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="stop">Stop</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_text_here">Enter text here</string>
+    <string name="example">Example</string>
+    <string name="submit">Submit</string>
+    <string name="select">Select</string>
 </resources>
