--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="enter_text_here">Enter text here</string>
+    <string name="_stars">* * * * * * *</string>
 </resources>
