--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,11 @@
     <string name="_stars5">* * * * * * *</string>
     <string name="size">Size</string>
     <string name="speed">Speed</string>
+    <string name="_time_elapsed">0</string>
+    <string name="startshulte">START</string>
+    <string name="_ename_schulte_table">SCHULTE TABLE</string>
+    <string name="_en_ex_timer">02:00</string>
+    <string name="even_numbers">Even Numbers</string>
+    <string name="_start_ex_en">START</string>
+    <string name="even_numbers_ex">Even Numbers</string>
 </resources>
