--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="start">Start</string>
     <string name="pause">Pause</string>
     <string name="stop">Stop</string>
+    <string name="start_schulte">Start</string>string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="enter_text_here">Enter text here</string>
@@ -23,8 +24,8 @@
     <string-array name="exercises">
         <item>Schulte Table</item>
         <item>Line of Sight</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
+        <item>Even Numbers</item>
+        <item>Word Pair</item>
+
     </string-array>
 </resources>
